# fscs-intern-bot

./: .gitlab-ci.yml  Cargo.toml  README.md  flake.nix
migrations/: 01_migrations.sql
src/: database.rs  keycloak.rs  main.rs  rest.rs  structs.rs
