[package]
name = "top-manager-discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.6.1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite", "uuid" ] }
reqwest = "0.11.6"
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
uuid = {version = "1.7.0", features = ["v4", "serde"]}
anyhow = "1"
oauth2 = "4"
