[package]
name = "discord-intern-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.6"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite", "uuid" ] }
reqwest = { version = "0", features = ["rustls-tls", "http2", "macos-system-configuration", "charset"], default-features = false }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
uuid = {version = "1", features = ["v4", "serde"]}
anyhow = "1"
oauth2 = "4"
chrono = { version = "0.4", features = ["serde"] }
